# NOCTIS

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  TERMS.md  check_note.js  foundry.toml  package-lock.json  package.json  remappings.txt  verify_note.js  verify_note2.js
circuits/: Cargo.toml
circuits/circom/: package-lock.json  package.json  withdrawal.circom
circuits/pkg/: noctis_circuits.js
circuits/src/: balance_withdrawal.rs  lib.rs  merkle.rs  poseidon.rs  poseidon_bn254.rs  wasm.rs  wasm_bn254.rs  withdrawal.rs
circuits/www/: index.html
docs/: README.md  backup.md  deposit.md  faq.md  getting-started.md  relayer.md  troubleshooting.md  withdraw.md
frontend/: .gitignore  debug-rpc.js  index.html  nginx_proxy_example.conf  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
frontend/public/wasm/: noctis_circuits_bg.wasm
frontend/src/: App.jsx  config.js  index.css  main.jsx
frontend/src/components/: ClaimLink.jsx  ConnectWallet.jsx  DepositCard.jsx  Header.jsx  Hero.jsx  Layout.jsx  MouseGlow.jsx  NotesPanel.jsx  Stats.jsx  SystemStatus.jsx  WithdrawCard.jsx
frontend/src/lib/: prover.js
frontend/src/stores/: wallet.js
script/: AddLiquidity.s.sol  CreatePool.s.sol  DeployEthVault.s.sol  DeployHook.s.sol  DeployHookCreate2.s.sol  DeployMainnet.s.sol  DeployV4.s.sol  TestSwap.s.sol
sdk/: example-usage.js  noctis-sdk.js  package-lock.json  package.json  test-sdk.js
sdk/wasm/: noctis-wasm.js  noctis_circuits.d.ts  noctis_circuits.wasm  noctis_circuits_bg.wasm.d.ts
src/core/: BalanceVaultV4.sol  BaseHook.sol  EthVaultV1.sol  IVerifier.sol  NoctisHook.sol  NoctisToken.sol  WithdrawalVerifier.sol  WithdrawalVerifierV2.sol
test/: EthVaultV1.t.sol  VerifierMemoryTest.t.sol
